--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
+    "validate": "svelte-check",
     "updateDocs": "rm -r ./docs/* && cp -r ./public/* ./docs/",
-    "validate": "svelte-check"
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.0",
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.0",
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -19,10 +26,9 @@
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "typescript": "^3.9.3",
+    "ts-node": "^9.1.1",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^1.0.0"
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
