Update test script to avoid long console print if there's an error

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "sirv public",
     "validate": "svelte-check",
     "updateDocs": "rm -r ./docs/* && cp -r ./public/* ./docs/",
-    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts || true"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
