--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "@types/ramda": "^0.27.44",
     "katex": "^0.13.0",
+    "ramda": "^0.27.1",
     "sirv-cli": "^1.0.0"
   }
 }
