--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/ramda": "^0.27.44",
     "katex": "^0.13.0",
     "ramda": "^0.27.1",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "typescript-collections": "^1.3.3"
   }
 }
